[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-vertex-bridge"
version = "0.1.0"
description = "A simple Vertex AI proxy that automatically refresh tokens for you."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "zetaloop", email = "zetaloop@outlook.com" }]
license = "Unlicense"
license-files = ["LICENSE"]
dependencies = [
    "google-auth",
    "fastapi",
    "uvicorn",
    "requests",
    "httpx",
    "apscheduler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Proxy Servers",
]
urls = { repository = "https://github.com/zetaloop/simple-vertex-bridge" }

[project.scripts]
simple-vertex-bridge = "svbridge:main"
